Список рекомендаций на главном экране

--- a/app/src/main/res/layout/card_recommendation.xml
+++ b/app/src/main/res/layout/card_recommendation.xml
@@ -3,12 +3,11 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/service_item"
-    android:layout_width="match_parent"
+    android:layout_width="350dp"
     android:layout_height="wrap_content"
     android:layout_gravity="center"
-    android:layout_marginStart="8dp"
+    android:layout_marginHorizontal="8dp"
     android:layout_marginTop="16dp"
-    android:layout_marginEnd="8dp"
     app:cardBackgroundColor="@color/champagne"
     app:cardElevation="0dp"
     app:strokeColor="@color/brown">
@@ -19,8 +18,8 @@
 
         <ImageView
             android:id="@+id/service_image"
-            android:layout_width="150dp"
-            android:layout_height="150dp"
+            android:layout_width="250dp"
+            android:layout_height="250dp"
             android:layout_marginTop="16dp"
             android:contentDescription="@string/service_image_content_description"
             app:layout_constraintEnd_toEndOf="parent"
@@ -31,9 +30,9 @@
 
         <ImageView
             android:id="@+id/promotion"
-            android:layout_width="55dp"
-            android:layout_height="55dp"
-            android:layout_marginStart="-20dp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="-38dp"
             android:layout_marginTop="-15dp"
             android:contentDescription="@string/promotion_circle_content_description"
             app:layout_constraintStart_toStartOf="@id/service_image"
@@ -47,7 +46,7 @@
             android:layout_height="wrap_content"
             android:fontFamily="@font/lato"
             android:textColor="@color/ivory"
-            android:textSize="14sp"
+            android:textSize="22sp"
             app:layout_constraintBottom_toBottomOf="@id/promotion"
             app:layout_constraintEnd_toEndOf="@id/promotion"
             app:layout_constraintStart_toStartOf="@id/promotion"
@@ -62,8 +61,8 @@
             android:layout_height="wrap_content"
             android:contentDescription="@string/service_favourite_content_description"
             app:icon="@drawable/baseline_favorite_border_24"
-            app:iconTint="@color/mauve"
             app:iconSize="@dimen/icon_size"
+            app:iconTint="@color/mauve"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
@@ -74,12 +73,11 @@
             android:layout_marginTop="5dp"
             android:fontFamily="@font/raleway"
             android:textColor="@color/brown"
-            android:textSize="14sp"
-            android:textAlignment="center"
+            android:textSize="18sp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/service_image"
-            tools:text="Кератиновое выпрямление" />
+            tools:text="Наращивание ресниц" />
 
         <TextView
             android:id="@+id/price"
@@ -135,6 +133,7 @@
             android:fontFamily="@font/lato"
             android:textColor="@color/brown"
             android:textSize="16sp"
+            app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/price"
@@ -150,24 +149,6 @@
             app:layout_constraintStart_toEndOf="@id/duration"
             app:layout_constraintTop_toTopOf="@+id/duration"
             app:srcCompat="@drawable/baseline_access_time_24" />
-
-        <com.google.android.material.button.MaterialButton
-            android:id="@+id/make_appointment_button"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="10dp"
-            android:layout_marginBottom="10dp"
-            android:backgroundTint="@color/mauve"
-            android:fontFamily="@font/raleway"
-            android:text="@string/favourites_make_appointment_button"
-            android:textColor="@color/ivory"
-            android:textSize="15sp"
-            app:cornerRadius="4dp"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/duration"
-            tools:ignore="VisualLintButtonSize,TextContrastCheck" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 </com.google.android.material.card.MaterialCardView>
