--- a/app/src/main/res/layout/fragment_main_page.xml
+++ b/app/src/main/res/layout/fragment_main_page.xml
@@ -56,7 +56,7 @@
             app:layout_constraintTop_toBottomOf="@id/suggestions_title"
             app:layout_constraintBottom_toBottomOf="parent"
             android:layout_marginBottom="16dp"
-            tools:listitem="@layout/card_service"
+            tools:listitem="@layout/card_recommendation"
             tools:orientation="horizontal" />
     </androidx.constraintlayout.widget.ConstraintLayout>
 </ScrollView>
